--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         }
     ],
     "require": {
+        "php": ">=5.5",
         "downshiftorg/wp-event-emitter": "^6.0",
         "php-di/php-di": "5.2.2"
     }
