Add wp-background-processing library

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Skyroom\\": "src/Skyroom"
+            "Skyroom\\": "src/Skyroom",
+            "SkyroomLibs\\": "libs"
         }
     },
     "repositories": [
