--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,9 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=7.2",
         "downshiftorg/wp-event-emitter": "^6.0",
-        "php-di/php-di": "^5.4.6"
+        "php-di/php-di": "^5.4.6",
+        "php-ds/php-ds": "^1.2"
     }
 }
