--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         {
             "name": "Hossein Sadeghi",
             "email": "ho.mysterious@gmail.com"
+        },
+        {
+            "name": "Mostafa Sardari",
+            "email": "sardary.mostafa@gmail.com"
         }
     ],
     "autoload": {
