Patch bump (1.6.3 → 1.6.4): Small bug fixes

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
         {
             "name": "Mostafa Sardari",
             "email": "sardary.mostafa@gmail.com"
+        },
+        {
+            "name": "Arman Hosseini",
+            "email": "namra.1377@gmail.com"
         }
     ],
     "autoload": {
